2003-06-23  H.J. Lu <hongjiu.lu@intel.com>

	* i386.h (i386_optab): Support Intel Precott New Instructions.

2003-06-10  Gary Hade <garyhade@us.ibm.com>

	* ppc.h (PPC_OPERAND_DQ): Define.

2003-06-10  Richard Sandiford  <rsandifo@redhat.com>

	* h8300.h (IMM4_NS, IMM8_NS): New.
	(h8_opcodes): Replace IMM4 with IMM4_NS in mov.b and mov.w entries.
	Likewise IMM8 for mov.w and mov.l.  Likewise IMM16U for mov.l.

2003-06-03  Michael Snyder  <msnyder@redhat.com>

	* h8300.h (enum h8_model): Add AV_H8S to distinguish from H8H.
	(ldc): Split ccr ops from exr ops (which are only available
	on H8S or H8SX).
	(stc): Ditto.
	(andc, orc, xorc): Ditto.
	(ldmac, stmac, clrmac, mac): Change access to AV_H8S.

2003-06-03  Michael Snyder  <msnyder@redhat.com>
	and Bernd Schmidt   <bernds@redhat.com>
	and Alexandre Oliva <aoliva@redhat.com>
	* h8300.h: Add support for h8300sx instruction set.

2003-05-23  Jason Eckhardt  <jle@rice.edu>

	* i860.h (expand_type): Add XP_ONLY.
	(scyc.b): New XP instruction.
	(ldio.l): Likewise.
	(ldio.s): Likewise.
	(ldio.b): Likewise.
	(ldint.l): Likewise.
	(ldint.s): Likewise.
	(ldint.b): Likewise.
	(stio.l): Likewise.
	(stio.s): Likewise.
	(stio.b): Likewise.
	(pfld.q): Likewise.

2003-05-20  Jason Eckhardt  <jle@rice.edu>

	* i860.h (flush): Set lower 3 bits properly and use 'L'
	for the immediate operand type instead of 'i'.

2003-05-20  Jason Eckhardt  <jle@rice.edu>

	* i860.h (fzchks): Both S and R bits must be set.
	(pfzchks): Likewise.
	(faddp): Likewise.
	(pfaddp): Likewise.
	(fix.ss): Remove (invalid instruction).
	(pfix.ss): Likewise.
	(ftrunc.ss): Likewise.
	(pftrunc.ss): Likewise.

2003-05-18  Jason Eckhardt  <jle@rice.edu>

	* i860.h (form, pform): Add missing .dd suffix.

2003-05-13  Stephane Carrez  <stcarrez@nerim.fr>

	* m68hc11.h (M68HC12_BANK_VIRT): Define to 0x010000

2003-04-07  Michael Snyder  <msnyder@redhat.com>

	* h8300.h (ldc/stc): Fix up src/dst swaps.

2003-04-09  J. Grant  <jg-binutils@jguk.org>
